Compiler/tests/errors/void_not_a_type.jack
// This file is part of the materials accompanying the book 
// "The Elements of Computing Systems" by Nisan and Schocken, 
// MIT Press. Book site: www.idc.ac.il/tecs
// File name: projects/10/ArrayTest/Main.jack

/** Computes the average of a sequence of integers. */


    class Main {

    function void Main () {

        var void a;

        return 3;

    }

}